test/Fail/Issue2494-pattern-hidden.err
Issue2494-pattern-hidden.agda:17.28-32: error: [UnequalTypes]
The type
  Blue
is not a subtype of
  Red
when checking that the expression blue has type Red
